--- a/style.css
+++ b/style.css
@@ -1,228 +1,75 @@
 body {
     font-family: sans-serif;
-    margin: 0;
-    font-size: 20px;
-    background-color: #1C7D1C;
-}
-
-h1 {
-    font-size: 30px;
-    text-align: center;
-    color: #0CAF0C;
-    width: fit-content;
-    margin: 10px auto;
-    padding: 5px;
-}
-
-htm1 {
-    background-color: #1E561E;
-}
-
-header h1 {
-    position: absolute;
-    background-color: #1E561E;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    border-radius: 10px;
-    padding: 10px;
-    display: block;
-    white-space: nowrap;
+    margin: 0px;
+    background-color: #8F0007;
 }
 
 header img {
     width: 100%;
-    height: 100px;
 }
 
-p {
-    font-size: 25px;
-    text-align: left;
+nav a{
+    padding: 10px;
+    margin: 5px;
+    border-radius: 10px;
+    background-color: #D5CA31;
+    display: inline-block;
+    text-decoration: none;
+    transition: 0.5s;
+    border: 3px solid black;
 }
 
-.OwO {
+nav a:hover{
+    background-color: rgba(51, 202, 31, 0.767);
+}
+
+header h1 {
+    position: absolute;
+    color: blue;
+    background-color: black;
+    left:50%;
+    transform: translate(-50%,0%);
+    padding: 5px;
+    border-radius: 5px;
+}
+nav{
+    text-align: center;
+}
+
+
+.main-info{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
+    width: 90%;
     margin: 10px auto;
-       background-color: #1E561E;
-   border-radius: 20px;
-   padding: 10px;
+    background-color: #1E837C;
+    padding: 10px;
+    border-radius: 10px;
 }
 
-.OwO p {
-   color: #0CAF0C;
+.main-info-contariner1 {
+    width: 70%;
 }
 
-.tt {
+.main-info-contariner2{
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
-
-.pop h1 {
-    background-color: #1E561E;
-    border-radius: 20px;
-}
-    
-.Koz{
-   background-color: #1E561E;
-   border-radius: 20px;
-   padding: 10px;
-   color: #0CAF0C;
+.main-info-contariner2 img{
+    width: 90%;
+    transition: 0.5S;
+    border-radius: 10PX;
 }
 
-.poppop {
-    display: flex;
-    justify-content: space-around;
+.main-info-contariner2 img:hover{
+    width: 100%;
 }
 
-.poppop div {
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-}
-.poppop img {
-    height: 80%;
-}
-
-.poppop div {
-    background-color: #1E561E ;
-    border-radius: 20px;
+footer{
+    background-color: rgb(36, 0, 240);
+    padding: 30px;
     text-align: center;
-    padding: 20px;
-}
-
-.poppop div a {
-    margin-top:10px;
-    border: 5px #19d400 solid;
-    padding: 20px;
-    transition: 1s linear;
-    color: #19d400;
-    text-decoration: none;
-}
-
-.poppop div a:hover {
-    border: 5px white solid;
-    background-color: black;
-    color: white;
-}
-
-.Ue {
-position: absolute;
-right: -100px; 
-transition: 0.3s; 
-padding: 15px; 
-width: 100px;
-font-size: 20px; 
-color: #19d400;
-border-radius: 0 5px 5px 0;
-}
-
-.Ue:hover {
-    right: 0;
-}
-
-.Ui {
-position: absolute;
-right: -100px; 
-transition: 0.3s; 
-padding: 15px; 
-width: 100px; 
-font-size: 20px; 
-color: #19d400;
-border-radius: 0 5px 5px 0;
-}
-
-.Ui:hover {
-    right: 0;
-}
-
-.Uk {
-position: absolute;
-right: -100px; 
-transition: 0.3s; 
-padding: 15px; 
-width: 100px; 
-font-size: 20px; 
-color: #19d400;
-border-radius: 0 5px 5px 0;
-}
-
-.Uk:hover {
-    right: 0;
-}
-
-.Up {
-position: absolute;
-right: -100px; 
-transition: 0.3s; 
-padding: 15px; 
-width: 100px; 
-font-size: 20px; 
-color: #19d400;
-border-radius: 0 5px 5px 0;
-}
-
-.Up:hover {
-    right: 0;
-}
-
-.Ui {
-    top: 80px;
- background-color: #15680a;
- border-radius: 10px;
- text-decoration: none;
- position: fixed;
-}
-
-.Ue {
-     top: 140px;
- background-color: #15680a;
-  border-radius: 10px;
-   text-decoration: none;
-    position: fixed;
-}
-
-.Uk {
-    top: 200px;
-background-color: #15680a;
- border-radius: 10px;
-  text-decoration: none;
-   position: fixed;
-}
-
-.Up {
-    top: 260px;
- background-color: #15680a;
-  border-radius: 10px;
-   text-decoration: none;
-    position: fixed;
-}
-
-.opi {
-    text-decoration: none;
-    color: #19d400;
-    font-size: 30px;
-}
-
-.uy {
-    width: 50px;
-    height: 50px;
-}
-
-footer {
-    border: 20px solid #1d491d;
-    margin-top: 10px;
-}
-
-.opy {
-    text-decoration: none;
-    color: #19d400;
-    font-size: 30px;
-    text-align: center;
-}
-
-.jjjjjjj {
-    margin: 0 auto;
-    width: fit-content;
 }
